updating test case multicomponent cantera

--- a/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_CANTERA.cfg
+++ b/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_CANTERA.cfg
@@ -46,9 +46,9 @@ PRANDTL_LAM= 0.72
 TURBULENT_CONDUCTIVITY_MODEL= NONE
 PRANDTL_TURB= 0.90
 %
-GAS_COMPOSITION_NAMES= H2, CH4
-CHEMICAL_MECHANISM_FILE= gri30.yaml
-PHASE_NAME= gri30
+GAS_COMPOSITION_NAMES= H2, O2
+CHEMICAL_MECHANISM_FILE= h2o2.yaml
+PHASE_NAME= ohmech
 TRANSPORT_MODEL= mixture-averaged
 %
 %
@@ -94,14 +94,14 @@ LINEAR_SOLVER_ITER= 5
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
 CONV_NUM_METHOD_FLOW= FDS
-MUSCL_FLOW= YES
+MUSCL_FLOW= NO
 SLOPE_LIMITER_FLOW = NONE
 TIME_DISCRE_FLOW= EULER_IMPLICIT
 %
 % -------------------- SCALAR TRANSPORT ---------------------------------------%
 %
 KIND_SCALAR_MODEL= SPECIES_TRANSPORT
-DIFFUSIVITY_MODEL= UNITY_LEWIS
+DIFFUSIVITY_MODEL= CANTERA
 DIFFUSIVITY_CONSTANT= 0.001
 %
 CONV_NUM_METHOD_SPECIES= BOUNDED_SCALAR
