Add STX hardware acceleration simulator to build system.

--- a/meson.build
+++ b/meson.build
@@ -303,6 +303,19 @@ if omp and get_option('enable-autodiff')
   endif
 endif
 
+if get_option('enable-spu')
+
+  assert(get_option('spu_root')!='',
+    'Must specify spu simulator folder (-Dspu_root=path/to/spu-simulator)')
+  spu_root = get_option('spu_root')
+  spu_dep = [declare_dependency(include_directories: [spu_root+'/include/base', spu_root+'/include/base/spu_offloading',
+              spu_root+'/include/simulator', spu_root+'/include/tools'],
+              link_args: ['-L'+spu_root+'/lib', '-lspu_runtime'])]
+
+  su2_cpp_args += '-DHAVE_SPU'
+  su2_deps += spu_dep
+endif
+
 # compile common library
 subdir('Common/src')
 # compile SU2_CFD executable
@@ -346,6 +359,7 @@ message('''---------------------------------------------------------------------
          libROM:         @11@
          CoolProp:       @12@
          MLPCpp:         @13@
+         SPU:            @14@
 
          Please be sure to add the $SU2_HOME and $SU2_RUN environment variables,
          and update your $PATH (and $PYTHONPATH if applicable) with $SU2_RUN
@@ -361,7 +375,8 @@ message('''---------------------------------------------------------------------
 '''.format(get_option('prefix')+'/bin', meson.project_source_root(), get_option('enable-tecio'), get_option('enable-cgns'),
            get_option('enable-autodiff'), get_option('enable-directdiff'), get_option('enable-pywrapper'), get_option('enable-mkl'),
            get_option('enable-openblas'), get_option('enable-pastix'), get_option('enable-mixedprec'), get_option('enable-librom'), get_option('enable-coolprop'),
-           get_option('enable-mlpcpp'), meson.project_build_root().startswith(meson.project_source_root()) ? meson.project_build_root().split('/')[-1] : meson.project_build_root()))
+           get_option('enable-mlpcpp'), get_option('enable-spu'),
+           meson.project_build_root().startswith(meson.project_source_root()) ? meson.project_build_root().split('/')[-1] : meson.project_build_root()))
 
 if get_option('enable-mpp')
   if get_option('install-mpp')
