--- a/meson_options.txt
+++ b/meson_options.txt
@@ -27,3 +27,5 @@ option('opdi-shared-read-opt', type : 'boolean', value : true, description : 'Op
 option('librom_root', type : 'string', value : '', description: 'libROM base directory')
 option('enable-librom', type : 'boolean', value : false, description: 'enable LLNL libROM support')
 option('static-cgns-deps', type : 'boolean', value : false, description: 'prefer static or dynamic (default) libraries for CGNS dependencies')
+option('enable-spu', type : 'boolean', value : false, description: 'enable spu offloading support')
+option('spu_root', type : 'string', value : '', description: 'spu simulator root directory')
