--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1727,6 +1727,12 @@ ELASTICITY_MODULUS= 1000.0
 % Poisson ratio
 POISSON_RATIO= 0.35
 %
+% Thermal expansion coefficient
+MATERIAL_THERMAL_EXPANSION_COEFF= 0
+%
+% Freestream temperature at which there is no stress from thermal expansion
+MATERIAL_REFERENCE_TEMPERATURE= 288.15
+%
 % Knowles B constant
 KNOWLES_B= 1.0
 %
