generalize body force for FEA solver and add centrifugal loads

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -2023,10 +2023,7 @@ NONLINEAR_FEM_SOLUTION_METHOD= NEWTON_RAPHSON
 % Formulation for bidimensional elasticity solver
 FORMULATION_ELASTICITY_2D= PLANE_STRAIN
 %
-% Apply dead loads
-DEAD_LOAD= NO
-%
-% pseudo static analysis (no density in dynamic analysis)
+% Pseudo static analysis (no density in dynamic analysis)
 PSEUDO_STATIC= NO
 %
 % Dynamic or static structural analysis (deprecated -> use TIME_DOMAIN)
