Primary SA_AFT_2019b push
Primary back up

--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -56,6 +56,7 @@ su2_cfd_src += files(['output/COutputFactory.cpp',
 
 su2_cfd_src += files(['variables/CIncNSVariable.cpp',
                       'variables/CTransLMVariable.cpp',
+                      'variables/CTransAFTVariable.cpp',
                       'variables/CAdjEulerVariable.cpp',
                       'variables/CHeatVariable.cpp',
                       'variables/CTurbVariable.cpp',
@@ -112,6 +113,7 @@ su2_cfd_src += files(['solvers/CSolverFactory.cpp',
                       'solvers/CTemplateSolver.cpp',
                       'solvers/CSpeciesSolver.cpp',
                       'solvers/CSpeciesFlameletSolver.cpp',
+                      'solvers/CTransAFTSolver.cpp',
                       'solvers/CTransLMSolver.cpp',
                       'solvers/CTurbSolver.cpp',
                       'solvers/CTurbSASolver.cpp',
