Changes for comments w/ update docs & reg test configs

--- a/TestCases/turbomachinery/axial_stage_2D/Axial_stage2D.cfg
+++ b/TestCases/turbomachinery/axial_stage_2D/Axial_stage2D.cfg
@@ -81,8 +81,8 @@ SPATIAL_FOURIER= NO
 TURBOMACHINERY_KIND= AXIAL AXIAL
 TURBO_PERF_KIND = TURBINE TURBINE
 TURBULENT_MIXINGPLANE= YES
-RAMP_OUTLET_PRESSURE= NO
-RAMP_OUTLET_PRESSURE_COEFF= (140000.0, 10.0, 2000)
+RAMP_OUTLET= NO
+RAMP_OUTLET_COEFF= (140000.0, 10.0, 2000)
 AVERAGE_PROCESS_KIND= MIXEDOUT
 PERFORMANCE_AVERAGE_PROCESS_KIND= MIXEDOUT
 MIXEDOUT_COEFF= (1.0, 1.0E-05, 15)
