--- a/TestCases/turbomachinery/multi_interface/multi_interface_rst.cfg
+++ b/TestCases/turbomachinery/multi_interface/multi_interface_rst.cfg
@@ -78,7 +78,7 @@ TURBOMACHINERY_KIND= AXIAL, AXIAL, AXIAL
 TURBO_PERF_KIND= (TURBINE, TURBINE, TURBINE)
 MIXINGPLANE_INTERFACE_KIND= LINEAR_INTERPOLATION
 TURBULENT_MIXINGPLANE= YES
-RAMP_OUTLET_PRESSURE= NO
+RAMP_OUTLET= NO
 AVERAGE_PROCESS_KIND= MIXEDOUT
 PERFORMANCE_AVERAGE_PROCESS_KIND= MIXEDOUT
 MIXEDOUT_COEFF= (1.0, 1.0E-05, 100)
