--- a/TestCases/turbomachinery/APU_turbocharger/Jones_restart.cfg
+++ b/TestCases/turbomachinery/APU_turbocharger/Jones_restart.cfg
@@ -79,8 +79,8 @@ TURBOMACHINERY_KIND= CENTRIPETAL CENTRIPETAL_AXIAL
 TURBO_PERF_KIND = TURBINE TURBINE
 MIXINGPLANE_INTERFACE_KIND= LINEAR_INTERPOLATION
 TURBULENT_MIXINGPLANE= YES
-RAMP_OUTLET_PRESSURE= NO
-RAMP_OUTLET_PRESSURE_COEFF= (400000.0, 10.0, 500)
+RAMP_OUTLET= NO
+RAMP_OUTLET_COEFF= (400000.0, 10.0, 500)
 AVERAGE_PROCESS_KIND= MIXEDOUT
 PERFORMANCE_AVERAGE_PROCESS_KIND= MIXEDOUT
 MIXEDOUT_COEFF= (1.0, 1.0E-05, 15)
