--- a/config_template.cfg
+++ b/config_template.cfg
@@ -735,33 +735,21 @@ MIXINGPLANE_INTERFACE_KIND= LINEAR_INTERPOLATION
 % Specify option for turbulent mixing-plane (YES, NO) default NO
 TURBULENT_MIXINGPLANE= YES
 %
-% Specify ramp option for Outlet pressure (YES, NO) default NO
-RAMP_OUTLET_PRESSURE= NO
+% Specify ramp option for Outlet Giles value (YES, NO) default NO
+RAMP_OUTLET= NO
 %
-% Parameters of the outlet pressure ramp (starting outlet pressure,
+% Parameters of the outlet Giles ramp (starting outlet value,
 % updating-iteration-frequency, total number of iteration for the ramp)
-RAMP_OUTLET_PRESSURE_COEFF= (400000.0, 10.0, 500)
+RAMP_OUTLET_COEFF= (400000.0, 10.0, 500)
 %
-% Specify ramp option for Outlet mass flow rate (YES, NO) default NO
-RAMP_OUTLET_MASS_FLOW= NO
 %
-% Parameters of the outlet mass flow rate ramp (starting outlet mass flow,
+% Specify ramp option for frame of motion (YES, NO) default NO
+RAMP_MOTION_FRAME= YES
+%
+% Parameters of the frame of motion ramp (starting frame of motion speed,
 % updating-iteration-frequency, total number of iteration for the ramp)
-RAMP_OUTLET_MASS_FLOW_COEFF= (0.5, 10.0, 500)
+RAMP_MOTION_FRAME_COEFF= (0.0, 39.0, 500)
 %
-% Specify ramp option for rotating frame (YES, NO) default NO
-RAMP_ROTATING_FRAME= YES
-%
-% Parameters of the rotating frame ramp (starting rotational speed,
-% updating-iteration-frequency, total number of iteration for the ramp)
-RAMP_ROTATING_FRAME_COEFF= (0.0, 39.0, 500)
-%
-% Specify ramp option for translation frame (YES, NO) default NO
-RAMP_TRANSLATION_FRAME= YES
-%
-% Parameters of the translation frame ramp (starting translation speed,
-% updating-iteration-frequency, total number of iteration for the ramp)
-RAMP_TRANSLATION_FRAME_COEFF= (0.0, 39.0, 500)
 %
 % Specify Kind of average process for linearizing the Navier-Stokes
 % equation at inflow and outflow BCs included at the mixing-plane interface
