Adapted data-driven fluid model test case to be compatible with physics-informed neural networks

--- a/TestCases/nicf/datadriven/datadriven_nozzle.cfg
+++ b/TestCases/nicf/datadriven/datadriven_nozzle.cfg
@@ -26,10 +26,10 @@ AOA= 0.0
 SIDESLIP_ANGLE= 0.0
 INIT_OPTION= TD_CONDITIONS
 FREESTREAM_OPTION= TEMPERATURE_FS
-FREESTREAM_PRESSURE= 250000.0
+FREESTREAM_PRESSURE= 904388
 %
 % Free-stream temperature (288.15 K, 518.67 R by default)
-FREESTREAM_TEMPERATURE= 400.0
+FREESTREAM_TEMPERATURE= 542.13
 FREESTREAM_DENSITY= 2.0
 REF_DIMENSIONALIZATION= DIMENSIONAL
 
@@ -37,8 +37,8 @@ REF_DIMENSIONALIZATION= DIMENSIONAL
 %
 FLUID_MODEL = DATADRIVEN_FLUID
 INTERPOLATION_METHOD = MLP
-FILENAMES_INTERPOLATOR = (MLP_air.mlp)
-DATADRIVEN_NEWTON_RELAXATION = 0.8
+FILENAMES_INTERPOLATOR = (MLP_MM.mlp)
+USE_PINN= YES 
 
 % --------------------------- VISCOSITY MODEL ---------------------------------%
 VISCOSITY_MODEL= CONSTANT_VISCOSITY
@@ -49,8 +49,12 @@ CONDUCTIVITY_MODEL= CONSTANT_CONDUCTIVITY
 THERMAL_CONDUCTIVITY_CONSTANT= 0.030542828
 
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
-MARKER_SYM= ( SYMMETRY, WALL )
+MARKER_SYM= ( SYMMETRY )
+MARKER_HEATFLUX= (WALL, 0.0)
 MARKER_RIEMANN= ( INFLOW, TOTAL_CONDITIONS_PT,  904388, 542.13, 1.0, 0.0, 0.0, OUTFLOW, STATIC_PRESSURE, 200000.0, 0.0, 0.0, 0.0, 0.0 )
+
+RAMP_OUTLET_PRESSURE= YES
+RAMP_OUTLET_PRESSURE_COEFF= (904388, 10, 200)
 
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 NUM_METHOD_GRAD= GREEN_GAUSS
@@ -89,7 +93,7 @@ CFL_REDUCTION_TURB= 1.0
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
 % Number of total iterations
-ITER= 10
+ITER= 1000
 CONV_RESIDUAL_MINVAL= -24
 CONV_STARTITER= 10
 
@@ -116,6 +120,7 @@ RESTART_FILENAME= restart_flow.dat
 %
 % Output file flow (w/o extension) variables
 VOLUME_FILENAME= flow
+VOLUME_OUTPUT=(PRIMITIVE, SOLUTION,RESIDUAL)
 %
 % Output file surface flow coefficient (w/o extension)
 SURFACE_FILENAME= surface_flow
@@ -124,4 +129,4 @@ SURFACE_FILENAME= surface_flow
 OUTPUT_WRT_FREQ= 500
 %
 % Screen output
-SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_TKE, RMS_DISSIPATION, LIFT, DRAG)
+SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_TKE)
