Changed conductivity model such that the test case can also be ran with ideal gas

--- a/TestCases/nicf/datadriven/datadriven_nozzle.cfg
+++ b/TestCases/nicf/datadriven/datadriven_nozzle.cfg
@@ -37,16 +37,17 @@ REF_DIMENSIONALIZATION= DIMENSIONAL
 %
 FLUID_MODEL = DATADRIVEN_FLUID
 INTERPOLATION_METHOD = MLP
-FILENAMES_INTERPOLATOR = (MLP_MM.mlp)
+FILENAMES_INTERPOLATOR = (MLP_nitrogen.mlp)
 USE_PINN= YES 
+
+CONDUCTIVITY_MODEL=CONSTANT_PRANDTL
+PRANDTL_LAM=0.7071413764001355
+PRANDTL_TURB=0.7071413764001355
 
 % --------------------------- VISCOSITY MODEL ---------------------------------%
 VISCOSITY_MODEL= CONSTANT_VISCOSITY
-MU_CONSTANT= 1.21409E-05
+MU_CONSTANT= 2.395531900375651e-05
 
-% --------------------------- THERMAL CONDUCTIVITY MODEL ----------------------%
-CONDUCTIVITY_MODEL= CONSTANT_CONDUCTIVITY
-THERMAL_CONDUCTIVITY_CONSTANT= 0.030542828
 
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 MARKER_SYM= ( SYMMETRY )
@@ -93,7 +94,7 @@ CFL_REDUCTION_TURB= 1.0
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
 % Number of total iterations
-ITER= 1000
+ITER= 10000
 CONV_RESIDUAL_MINVAL= -24
 CONV_STARTITER= 10
 
@@ -113,13 +114,13 @@ SOLUTION_FILENAME= solution_flow.dat
 TABULAR_FORMAT= CSV
 %
 % Output file convergence history (w/o extension)
-CONV_FILENAME= history
+CONV_FILENAME= history_nitrogen_DD
 %
 % Output file restart flow
 RESTART_FILENAME= restart_flow.dat
 %
 % Output file flow (w/o extension) variables
-VOLUME_FILENAME= flow
+VOLUME_FILENAME= flow_nitrogen_DD
 VOLUME_OUTPUT=(PRIMITIVE, SOLUTION,RESIDUAL)
 %
 % Output file surface flow coefficient (w/o extension)
