--- a/TestCases/py_wrapper/turbulent_premixed_psi/psi.cfg
+++ b/TestCases/py_wrapper/turbulent_premixed_psi/psi.cfg
@@ -1,11 +1,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Species mixing with 3 species, i.e. 2 transport equations  %
-% Author: T. Kattmann                                                          %
+% Case description: Turbulent premixed high pressure combustion chamber.       %
+% Author: N. Beishuizen                                                        %
 % Institution: Bosch Thermotechniek B.V.                                       %
-% Date: 2021/10/14                                                             %
-% File Version 7.5.1 "Blackbird"                                               %
+% Date: 2025/01/01                                                             %
+% File Version 8.0 "Harrier"                                                   %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -79,12 +79,10 @@ MARKER_OUTLET= ( outlet, 0.0 )
 %
 NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 %
-%CFL_NUMBER= 25.0
 CFL_NUMBER= 20.0
 CFL_REDUCTION_SPECIES= 1.0
 CFL_REDUCTION_TURB= 1.0
 %
-% Run commented Iter for good results
 ITER= 1
 %
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
@@ -104,7 +102,6 @@ TIME_DISCRE_FLOW= EULER_IMPLICIT
 % -------------------- SCALAR TRANSPORT ---------------------------------------%
 %
 KIND_SCALAR_MODEL= SPECIES_TRANSPORT
-%DIFFUSIVITY_MODEL= CONSTANT_SCHMIDT
 DIFFUSIVITY_MODEL= CONSTANT_DIFFUSIVITY
 SCHMIDT_NUMBER_LAMINAR= 1.0
 DIFFUSIVITY_CONSTANT= 7.56e-5
