Reverted changes from merging with PR#2419

--- a/TestCases/turbomachinery/Aachen_turbine/aachen_3D_MP_restart.cfg
+++ b/TestCases/turbomachinery/Aachen_turbine/aachen_3D_MP_restart.cfg
@@ -173,10 +173,10 @@ MIXINGPLANE_INTERFACE_KIND= LINEAR_INTERPOLATION
 TURBULENT_MIXINGPLANE= YES
 %
 % Specify ramp option for Outlet pressure (YES, NO) default NO
-RAMP_OUTLET= NO
+RAMP_OUTLET_PRESSURE= NO
 %
 % Parameters of the outlet pressure ramp (starting outlet pressure, updating-iteration-frequency, total number of iteration for the ramp)
-RAMP_OUTLET_COEFF= (140000.0, 150.0, 2000)
+RAMP_OUTLET_PRESSURE_COEFF= (140000.0, 150.0, 2000)
 %
 % Specify Kind of average process for linearizing the Navier-Stokes equation at inflow and outflow BC included mixing-plane
 % (ALGEBRAIC, AREA, MASSSFLUX, MIXEDOUT) default AREA 
