--- a/meson_options.txt
+++ b/meson_options.txt
@@ -30,3 +30,4 @@ option('enable-librom', type : 'boolean', value : false, description: 'enable LL
 option('static-cgns-deps', type : 'boolean', value : false, description: 'prefer static or dynamic (default) libraries for CGNS dependencies')
 option('enable-spu', type : 'boolean', value : false, description: 'enable spu offloading support')
 option('spu_root', type : 'string', value : '', description: 'spu simulator root directory')
+option('llvm_root', type : 'string', value : '', description: 'llvm compiler root directory')
