update config files

--- a/TestCases/navierstokes/periodic2D/config.cfg
+++ b/TestCases/navierstokes/periodic2D/config.cfg
@@ -34,7 +34,7 @@ MARKER_OUTLET= ( outlet, 99000.0 )
 INLET_TYPE= TOTAL_CONDITIONS
 MARKER_INLET= ( inlet, 300, 100000, 1, 0, 0 )
 SPECIFIED_INLET_PROFILE= YES
-INLET_FILENAME= inlet
+INLET_FILENAME= inlet.dat
 %
 MARKER_ANALYZE= ( outlet, inlet )
 
