--- a/TestCases/navierstokes/poiseuille/profile_poiseuille.cfg
+++ b/TestCases/navierstokes/poiseuille/profile_poiseuille.cfg
@@ -61,7 +61,7 @@ MARKER_HEATFLUX= ( left, 0.0, right, 0.0 )
 INLET_TYPE= MASS_FLOW
 
 SPECIFIED_INLET_PROFILE= YES
-INLET_FILENAME= inlet_poiseuille
+INLET_FILENAME= inlet_poiseuille.dat
 MARKER_INLET= ( lower, 1.0, 1.0, 0.0, 1.0, 0.0 )
 MARKER_OUTLET= ( upper, 100000.0 )
 MARKER_PLOTTING= ( upper )
