--- a/TestCases/sliding_interface/incompressible_unsteady/configOut.cfg
+++ b/TestCases/sliding_interface/incompressible_unsteady/configOut.cfg
@@ -64,7 +64,7 @@ MARKER_FLUID_INTERFACE= (circleOut)
 
 INC_INLET_TYPE= VELOCITY_INLET
 SPECIFIED_INLET_PROFILE= YES
-INLET_FILENAME= inlet
+INLET_FILENAME= inlet.dat
 MARKER_INLET= ( inlet, 200, 1.0, 1.0, 0.0, 0.0)
 
 MARKER_PLOTTING= ( NONE )
