--- a/TestCases/rans/flatplate/turb_SA_flatplate_species.cfg
+++ b/TestCases/rans/flatplate/turb_SA_flatplate_species.cfg
@@ -38,7 +38,7 @@ REF_AREA= 2.0
 %
 MARKER_HEATFLUX= ( wall, 0.0 )
 SPECIFIED_INLET_PROFILE= YES
-INLET_FILENAME= inlet
+INLET_FILENAME= inlet.dat
 INC_INLET_TYPE=  VELOCITY_INLET
 MARKER_INLET= ( inlet, 302.4, 118309.784, 1.0, 0.0, 0.0 )
 MARKER_INLET_SPECIES= ( inlet, 1.0 )
