--- a/TestCases/species_transport/venturi_primitive_3species/species3_primitiveVenturi_inletFile.cfg
+++ b/TestCases/species_transport/venturi_primitive_3species/species3_primitiveVenturi_inletFile.cfg
@@ -47,7 +47,7 @@ MARKER_HEATFLUX= ( wall, 0.0 )
 MARKER_SYM= ( axis )
 %
 SPECIFIED_INLET_PROFILE= YES
-INLET_FILENAME= inlet_venturi
+INLET_FILENAME= inlet_venturi.dat
 INC_INLET_TYPE=  VELOCITY_INLET VELOCITY_INLET
 MARKER_INLET= ( gas_inlet,       300, 1.0, 1.0,  0.0, 0.0,\
                 air_axial_inlet, 300, 1.0, 0.0, -1.0, 0.0 )
