--- a/TestCases/py_wrapper/turbulent_premixed_psi/psi.cfg
+++ b/TestCases/py_wrapper/turbulent_premixed_psi/psi.cfg
@@ -15,6 +15,8 @@ SOLVER= INC_RANS
 KIND_TURB_MODEL= SST
 SST_OPTIONS= V1994m
 
+RESTART_SOL= YES
+
 MGLEVEL= 0
 %
 
@@ -63,11 +65,12 @@ MARKER_SYM= ( symmetry )
 AXISYMMETRIC= YES
 %
 SPECIFIED_INLET_PROFILE= YES
+INLET_MATCHING_TOLERANCE=1e-4
 INLET_FILENAME= inlet.dat
 %INLET_INTERPOLATION_FUNCTION= LINEAR_1D
 INC_INLET_TYPE=  VELOCITY_INLET
 INC_INLET_DAMPING= 0.01
-MARKER_INLET= ( inlet,       673, 40.0, 1.0,  0.0, 0.0)
+MARKER_INLET= ( inlet, 673, 40.0, 1.0,  0.0, 0.0)
 MARKER_INLET_TURBULENT = (inlet, 0.10, 15)
 MARKER_INLET_SPECIES= (inlet, 0.0)
 %
@@ -79,7 +82,7 @@ MARKER_OUTLET= ( outlet, 0.0 )
 %
 NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 %
-CFL_NUMBER= 20.0
+CFL_NUMBER= 1.0
 CFL_REDUCTION_SPECIES= 1.0
 CFL_REDUCTION_TURB= 1.0
 %
@@ -90,7 +93,7 @@ ITER= 1
 LINEAR_SOLVER= FGMRES
 LINEAR_SOLVER_PREC= ILU
 LINEAR_SOLVER_ERROR= 1E-8
-LINEAR_SOLVER_ITER= 5
+LINEAR_SOLVER_ITER= 10
 
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
@@ -136,15 +139,14 @@ CONV_STARTITER= 10
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
 %MESH_FILENAME= psi_coarse.su2
-MESH_FILENAME= psi_medium.su2
+MESH_FILENAME= psi.su2
 %MESH_FILENAME= psi_fine.su2
 %
 SCREEN_OUTPUT= INNER_ITER WALL_TIME \
-               RMS_PRESSURE RMS_VELOCITY-X RMS_VELOCITY-Y RMS_TKE RMS_DISSIPATION RMS_SPECIES_0 RMS_SPECIES_1 \
+               RMS_PRESSURE RMS_VELOCITY-X RMS_VELOCITY-Y RMS_TKE RMS_DISSIPATION RMS_SPECIES_0 \
                LINSOL_ITER LINSOL_RESIDUAL \
                LINSOL_ITER_TURB LINSOL_RESIDUAL_TURB \
-               LINSOL_ITER_SPECIES LINSOL_RESIDUAL_SPECIES \
-               SURFACE_SPECIES_0
+               LINSOL_ITER_SPECIES LINSOL_RESIDUAL_SPECIES
 SCREEN_WRT_FREQ_INNER= 1
 %
 HISTORY_OUTPUT= ITER RMS_RES LINSOL SPECIES_COEFF SPECIES_COEFF_SURF
@@ -156,7 +158,6 @@ OUTPUT_FILES= RESTART_ASCII, PARAVIEW_MULTIBLOCK
 VOLUME_OUTPUT= RESIDUAL, PRIMITIVE
 OUTPUT_WRT_FREQ= 100
 %
-RESTART_SOL= YES
 READ_BINARY_RESTART= NO
 RESTART_FILENAME= restart
 SOLUTION_FILENAME= solution
