Check if MLPCpp is enabled before configuring AD unit tests

--- a/UnitTests/meson.build
+++ b/UnitTests/meson.build
@@ -19,8 +19,10 @@ su2_cfd_tests = files(['Common/geometry/primal_grid/CPrimalGrid_tests.cpp',
                        'SU2_CFD/windowing.cpp'])
 
 # Reverse-mode (algorithmic differentiation) tests:
-su2_cfd_tests_ad = files(['Common/simple_ad_test.cpp',
-                          'SU2_CFD/fluid/CFluidModel_tests_AD.cpp'])
+su2_cfd_tests_ad = files(['Common/simple_ad_test.cpp'])
+if get_option('enable-mlpcpp')
+  su2_cfd_tests_ad = su2_cfd_tests_ad + files(['SU2_CFD/fluid/CFluidModel_tests_AD.cpp'])
+endif
 
 # Forward-mode (direct differentiation) tests:
 su2_cfd_tests_dd = files(['Common/simple_directdiff_test.cpp'])
