Added PINN options to config template and removed out-of-date comments

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -441,7 +441,14 @@ FILENAMES_INTERPOLATOR= (MLP_1.mlp, MLP_2.mlp, MLP_3.mlp)
 % Relaxation factor for the Newton solvers in the data-driven fluid model
 DATADRIVEN_NEWTON_RELAXATION= 0.8
 
-%
+% Use physics-informed neural network for calculation of the fluid caloric properties.
+USE_PINN= YES 
+
+% Optional initial guess for fluid density and static energy in data-driven fluid analysis.
+DATADRIVEN_INITIAL_DENSITY= -1
+DATADRIVEN_INITIAL_ENERGY= -1
+
+
 % Specify if there is ionization
 IONIZATION= NO
 %
@@ -735,20 +742,19 @@ MIXINGPLANE_INTERFACE_KIND= LINEAR_INTERPOLATION
 % Specify option for turbulent mixing-plane (YES, NO) default NO
 TURBULENT_MIXINGPLANE= YES
 %
-% Specify ramp option for Outlet Giles value (YES, NO) default NO
-RAMP_OUTLET= NO
+% Specify ramp option for Outlet pressure (YES, NO) default NO
+RAMP_OUTLET_PRESSURE= NO
 %
-% Parameters of the outlet Giles ramp (starting outlet value,
+% Parameters of the outlet pressure ramp (starting outlet pressure,
 % updating-iteration-frequency, total number of iteration for the ramp)
-RAMP_OUTLET_COEFF= (400000.0, 10.0, 500)
+RAMP_OUTLET_PRESSURE_COEFF= (400000.0, 10.0, 500)
 %
-% Specify ramp option for frame of motion (YES, NO) default NO
-RAMP_MOTION_FRAME= YES
+% Specify ramp option for rotating frame (YES, NO) default NO
+RAMP_ROTATING_FRAME= YES
 %
-% Parameters of the frame of motion ramp (starting frame of motion speed,
+% Parameters of the rotating frame ramp (starting rotational speed,
 % updating-iteration-frequency, total number of iteration for the ramp)
-RAMP_MOTION_FRAME_COEFF= (0.0, 39.0, 500)
-%
+RAMP_ROTATING_FRAME_COEFF= (0.0, 39.0, 500)
 %
 % Specify Kind of average process for linearizing the Navier-Stokes
 % equation at inflow and outflow BCs included at the mixing-plane interface
