Streamlined Vector GPU Storage, Introduced flags to control memory transfer and standardized file structure

--- a/Common/src/linear_algebra/meson.build
+++ b/Common/src/linear_algebra/meson.build
@@ -2,6 +2,7 @@ common_src += files(['CSysSolve_b.cpp',
                      'CSysSolve.cpp',
                      'CSysVector.cpp',
                      'CSysMatrix.cpp',
-                     'GPU_lin_alg.cu',
+                     'GPUMatrix.cu',
+                     'GPUVector.cu',
                      'CPastixWrapper.cpp',
                      'blas_structure.cpp'])
