--- a/TestCases/py_wrapper/custom_source/lam_buoyancy_cavity.cfg
+++ b/TestCases/py_wrapper/custom_source/lam_buoyancy_cavity.cfg
@@ -72,7 +72,7 @@ CFL_ADAPT= NO
 CFL_ADAPT_PARAM= ( 1.5, 0.5, 15.0, 1e10)
 MAX_DELTA_TIME= 1E6
 RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
-ITER=1
+ITER=6
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -114,7 +114,5 @@ GRAD_OBJFUNC_FILENAME= of_grad.dat
 SURFACE_FILENAME= surface_flow
 SURFACE_ADJ_FILENAME= surface_adjoint
 OUTPUT_WRT_FREQ= 100
-SCREEN_OUTPUT= (OUTER_ITER, INNER_ITER, RMS_PRESSURE, RMS_TEMPERATURE, LIFT, DRAG)
+SCREEN_OUTPUT= (OUTER_ITER,INNER_ITER, RMS_PRESSURE, RMS_VELOCITY-X, RMS_VELOCITY-Y, RMS_TEMPERATURE)
 
-% ----------------------- GEOMETRY EVALUATION PARAMETERS ----------------------%
-GEO_BOUNDS= ( 0.499, 0.501)
