Introduced Memory Wrapper Functions, Error Handling and Constant Block Sizes

--- a/Common/src/linear_algebra/meson.build
+++ b/Common/src/linear_algebra/meson.build
@@ -2,7 +2,7 @@ common_src += files(['CSysSolve_b.cpp',
                      'CSysSolve.cpp',
                      'CSysVector.cpp',
                      'CSysMatrix.cpp',
-                     'GPUMatrix.cu',
-                     'GPUVector.cu',
+                     'CSysMatrixGPU.cu',
+                     'CSysVectorGPU.cu',
                      'CPastixWrapper.cpp',
                      'blas_structure.cpp'])
