--- a/TestCases/incomp_navierstokes/cylinder_split/cylinder_split.cfg
+++ b/TestCases/incomp_navierstokes/cylinder_split/cylinder_split.cfg
@@ -28,7 +28,7 @@ INC_DENSITY_MODEL= CONSTANT
 INC_DENSITY_INIT= 1.0
 FREESTREAM_DENSITY= 1.0
 FREESTREAM_TEMPERATURE=300.0
-FREESTREAM_VELOCITY=10.0 0.0 0.0	
+FREESTREAM_VELOCITY=10.0 0.0 0.0
 INC_ENERGY_EQUATION= NO
 
 % ---------------------- REFERENCE VALUE DEFINITION ---------------------------%
@@ -86,10 +86,10 @@ CONV_CAUCHY_EPS= 1E-6
 OUTPUT_FILES= RESTART, PARAVIEW_MULTIBLOCK
 MESH_FILENAME= cylinder_split.cgns
 MESH_FORMAT= CGNS
-SOLUTION_FILENAME= solution_flow.dat
+SOLUTION_FILENAME= solution_flow
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
-RESTART_FILENAME= restart_flow.dat
+RESTART_FILENAME= restart_flow
 VOLUME_FILENAME= flow
 SURFACE_FILENAME= surface_flow
 OUTPUT_WRT_FREQ= 100
