--- a/TestCases/fea_fsi/ThermalBeam_3d/configBeam_3d.cfg
+++ b/TestCases/fea_fsi/ThermalBeam_3d/configBeam_3d.cfg
@@ -25,8 +25,8 @@ MESH_FORMAT= SU2
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history_beam
 VOLUME_FILENAME= beam
-RESTART_FILENAME= restart_beam
-SOLUTION_FILENAME= restart_beam
+RESTART_FILENAME= restart_beam.dat
+SOLUTION_FILENAME= restart_beam.dat
 OUTPUT_WRT_FREQ= 1
 INNER_ITER=1
 
