remove extension from adjoint restart files

--- a/TestCases/radiation/p1model/configp1.cfg
+++ b/TestCases/radiation/p1model/configp1.cfg
@@ -102,8 +102,8 @@ MESH_FORMAT= SU2
 MESH_FILENAME= meshp1.su2
 
 OUTPUT_FILES = (RESTART, PARAVIEW)
-SOLUTION_FILENAME= solution_flow_p1.dat
-RESTART_FILENAME= restart_flow_p1.dat
+SOLUTION_FILENAME= solution_flow_p1
+RESTART_FILENAME= restart_flow_p1
 VOLUME_FILENAME= flow_p1
 
 TABULAR_FORMAT= CSV
