--- a/TestCases/disc_adj_fsi/Airfoil_2d/configFEA.cfg
+++ b/TestCases/disc_adj_fsi/Airfoil_2d/configFEA.cfg
@@ -46,10 +46,10 @@ MESH_FORMAT= SU2
 CUSTOM_OUTPUTS= 'sens_e : Function{1e8 * SENS_E_0};\
                  ref_node : Function{1e3 * REFERENCE_NODE}'
 RESTART_SOL= NO
-SOLUTION_FILENAME= solution_solid.dat
-SOLUTION_ADJ_FILENAME= adjoint_solid.dat
-RESTART_FILENAME= solution_solid.dat
-RESTART_ADJ_FILENAME= adjoint_solid.dat
+SOLUTION_FILENAME= solution_solid
+SOLUTION_ADJ_FILENAME= adjoint_solid
+RESTART_FILENAME= solution_solid
+RESTART_ADJ_FILENAME= adjoint_solid
 TABULAR_FORMAT= CSV
 VOLUME_FILENAME= solid
 VOLUME_ADJ_FILENAME= adjoint_solid
