--- a/TestCases/disc_adj_fsi/dyn_fsi/configFEA.cfg
+++ b/TestCases/disc_adj_fsi/dyn_fsi/configFEA.cfg
@@ -48,11 +48,11 @@ INCREMENTAL_LOAD= NO
 MESH_FILENAME= mesh.su2
 MESH_FORMAT= SU2
 
-SOLUTION_FILENAME= solution_solid.dat
-SOLUTION_ADJ_FILENAME= adjoint_solid.dat
+SOLUTION_FILENAME= solution_solid
+SOLUTION_ADJ_FILENAME= adjoint_solid
 OUTPUT_WRT_FREQ= 1
-RESTART_FILENAME= solution_solid.dat
-RESTART_ADJ_FILENAME= adjoint_solid.dat
+RESTART_FILENAME= solution_solid
+RESTART_ADJ_FILENAME= adjoint_solid
 TABULAR_FORMAT= CSV
 VOLUME_FILENAME= solid
 VOLUME_ADJ_FILENAME= adjoint_solid
