--- a/TestCases/disc_adj_fsi/dyn_fsi/configFlow.cfg
+++ b/TestCases/disc_adj_fsi/dyn_fsi/configFlow.cfg
@@ -85,11 +85,11 @@ CONV_RESIDUAL_MINVAL= -7
 MESH_FILENAME= mesh.su2
 MESH_FORMAT= SU2
 %
-SOLUTION_FILENAME= solution_fluid.dat
-SOLUTION_ADJ_FILENAME= adjoint_fluid.dat
+SOLUTION_FILENAME= solution_fluid
+SOLUTION_ADJ_FILENAME= adjoint_fluid
 OUTPUT_WRT_FREQ= 1
-RESTART_FILENAME= solution_fluid.dat
-RESTART_ADJ_FILENAME= adjoint_fluid.dat
+RESTART_FILENAME= solution_fluid
+RESTART_ADJ_FILENAME= adjoint_fluid
 TABULAR_FORMAT= CSV
 VOLUME_FILENAME= fluid
 VOLUME_ADJ_FILENAME= adjoint_fluid
