--- a/TestCases/navierstokes/poiseuille/profile_poiseuille.cfg
+++ b/TestCases/navierstokes/poiseuille/profile_poiseuille.cfg
@@ -112,12 +112,12 @@ CONV_CAUCHY_EPS= 1E-6
 MESH_FILENAME= mesh_poiseuille_51x51.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= solution_flow_profile.dat
-SOLUTION_ADJ_FILENAME= solution_adj.dat
+SOLUTION_FILENAME= solution_flow_profile
+SOLUTION_ADJ_FILENAME= solution_adj
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
 RESTART_FILENAME= restart_flow
-RESTART_ADJ_FILENAME= restart_adj.dat
+RESTART_ADJ_FILENAME= restart_adj
 VOLUME_FILENAME= flow
 VOLUME_ADJ_FILENAME= adjoint
 GRAD_OBJFUNC_FILENAME= of_grad.dat
