--- a/TestCases/rans/naca0012/turb_NACA0012_sa.cfg
+++ b/TestCases/rans/naca0012/turb_NACA0012_sa.cfg
@@ -89,12 +89,12 @@ CONV_CAUCHY_EPS= 1E-6
 MESH_FILENAME= n0012_225-65.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= solution_flow_sa.dat
-SOLUTION_ADJ_FILENAME= solution_adj.dat
+SOLUTION_FILENAME= solution_flow_sa
+SOLUTION_ADJ_FILENAME= solution_adj
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
 RESTART_FILENAME= restart_flow
-RESTART_ADJ_FILENAME= restart_adj.dat
+RESTART_ADJ_FILENAME= restart_adj
 VOLUME_FILENAME= flow
 VOLUME_ADJ_FILENAME= adjoint
 GRAD_OBJFUNC_FILENAME= of_grad.dat
