--- a/TestCases/rans_uq/naca0012/turb_NACA0012_uq.cfg
+++ b/TestCases/rans_uq/naca0012/turb_NACA0012_uq.cfg
@@ -88,12 +88,12 @@ CONV_CAUCHY_EPS= 1E-5
 MESH_FILENAME= mesh_n0012_225-65.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= solution_flow_sst.dat
-SOLUTION_ADJ_FILENAME= solution_adj.dat
+SOLUTION_FILENAME= solution_flow_sst
+SOLUTION_ADJ_FILENAME= solution_adj
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
 RESTART_FILENAME= restart_flow
-RESTART_ADJ_FILENAME= restart_adj.dat
+RESTART_ADJ_FILENAME= restart_adj
 VOLUME_FILENAME= flow
 VOLUME_ADJ_FILENAME= adjoint
 GRAD_OBJFUNC_FILENAME= of_grad.dat
