--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -217,6 +217,56 @@ jobs:
         with:
           entrypoint: /bin/rm
           args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
+  discadj_tape_tests:
+    if: inputs.runner != 'ARM64'
+    runs-on: ${{ inputs.runner || 'ubuntu-latest' }}
+    name: Tape Tests
+    needs: build
+    strategy:
+      fail-fast: false
+      matrix:
+        testscript: ['serial_regression_AD.py']
+      include:
+        - testscript: 'serial_regression_AD.py'
+          #tag: TagNoMPI
+          tag:NoMPI # check
+    steps:
+      - name: Pre Cleanup
+        uses: docker://ghcr.io/su2code/su2/test-su2:240320-1536
+        with:
+          entrypoint: /bin/rm
+          args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
+      - name: Download All artifacts
+        uses: actions/download-artifact@v4
+      - name: Uncompress and Move Binaries
+        run: |
+          BIN_FOLDER="$PWD/install/bin"
+          mkdir -p $BIN_FOLDER
+          ls -lah $BIN_FOLDER
+          for type in Base Reverse Forward; do
+            TYPE_FOLDER="${type}OMP-tsan"
+            echo "Processing '$TYPE_FOLDER' ..."
+            if [ -d $TYPE_FOLDER ]; then
+              pushd $TYPE_FOLDER
+              ls -lah
+              tar -zxvf install_bin.tgz
+              ls -lah install/bin/
+              cp -r install/* $BIN_FOLDER/../
+              popd;
+            fi
+          done
+          chmod a+x $BIN_FOLDER/*
+          ls -lahR $BIN_FOLDER
+      - name: Run Tests in Container
+        uses: docker://ghcr.io/su2code/su2/test-su2:240320-1536
+        with:
+          # -t <Tutorials-branch> -c <Testcases-branch>
+          args: -b ${{github.ref}} -t develop -c develop -s ${{matrix.testscript}} -a "--tagtape"
+      - name: Cleanup
+        uses: docker://ghcr.io/su2code/su2/test-su2:240320-1536
+        with:
+          entrypoint: /bin/rm
+          args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
   thread_sanitizer_tests:
     if: inputs.runner != 'ARM64'
     runs-on: ${{ inputs.runner || 'ubuntu-latest' }}
