--- a/TestCases/unsteady/square_cylinder/turb_square.cfg
+++ b/TestCases/unsteady/square_cylinder/turb_square.cfg
@@ -102,7 +102,7 @@ SOLUTION_ADJ_FILENAME= solution_adj.dat
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
 RESTART_FILENAME= restart_flow
-RESTART_ADJ_FILENAME= restart_adj.dat
+RESTART_ADJ_FILENAME= restart_adj
 VOLUME_FILENAME= flow
 VOLUME_ADJ_FILENAME= adjoint
 GRAD_OBJFUNC_FILENAME= of_grad.dat
