--- a/Common/src/linear_algebra/meson.build
+++ b/Common/src/linear_algebra/meson.build
@@ -2,7 +2,9 @@ common_src += files(['CSysSolve_b.cpp',
                      'CSysSolve.cpp',
                      'CSysVector.cpp',
                      'CSysMatrix.cpp',
-                     'CSysMatrixGPU.cu',
-                     'CSysVectorGPU.cu',
                      'CPastixWrapper.cpp',
                      'blas_structure.cpp'])
+
+  if get_option('enable-cuda')
+    common_src += files(['CSysMatrixGPU.cu', 'CSysVectorGPU.cu',])
+endif
