fix binary restart key

--- a/TestCases/disc_adj_fea/configAD_fem.cfg
+++ b/TestCases/disc_adj_fea/configAD_fem.cfg
@@ -19,7 +19,7 @@ ITER = 10
 OBJECTIVE_FUNCTION = REFERENCE_GEOMETRY
 REFERENCE_GEOMETRY = YES
 
-REFERENCE_GEOMETRY_FILENAME = reference_geometry.dat
+REFERENCE_GEOMETRY_FILENAME = reference_geometry
 REFERENCE_GEOMETRY_FORMAT = SU2
 REFERENCE_GEOMETRY_PENALTY = 1E6
 % Consider only the surface
