--- a/TestCases/disc_adj_fsi/configFEA.cfg
+++ b/TestCases/disc_adj_fsi/configFEA.cfg
@@ -18,7 +18,7 @@ ELECTRIC_FIELD_DIR = (0.0,1.0)
 ELECTRIC_FIELD_MOD = 20E5
 
 REFERENCE_GEOMETRY = YES
-REFERENCE_GEOMETRY_FILENAME = reference_geometry.dat
+REFERENCE_GEOMETRY_FILENAME = reference_geometry
 REFERENCE_GEOMETRY_FORMAT = SU2
 % Consider only the surface
 REFERENCE_GEOMETRY_SURFACE = NO
