--- a/config_template.cfg
+++ b/config_template.cfg
@@ -2104,7 +2104,7 @@ REFERENCE_GEOMETRY= NO
 REFERENCE_GEOMETRY_PENALTY= 1.0E6
 %
 % Reference geometry filename
-REFERENCE_GEOMETRY_FILENAME= reference_geometry.dat
+REFERENCE_GEOMETRY_FILENAME= reference_geometry
 %
 % Format of the reference geometry file
 REFERENCE_GEOMETRY_FORMAT= SU2_REF
