fix FEM prestretch

--- a/TestCases/disc_adj_fsi/configFEA.cfg
+++ b/TestCases/disc_adj_fsi/configFEA.cfg
@@ -10,7 +10,7 @@
 SOLVER= ELASTICITY
 
 PRESTRETCH = YES
-PRESTRETCH_FILENAME = prestretch.dat
+PRESTRETCH_FILENAME = prestretch
 
 DE_EFFECTS = YES
 ELECTRIC_FIELD_CONST = 4.25E-11
