--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1822,7 +1822,7 @@ ELECTRIC_FIELD_DIR= (0.0, 1.0)
 PRESTRETCH= NO
 %
 % Filename to input for prestretching membranes
-PRESTRETCH_FILENAME= prestretch_file.dat
+PRESTRETCH_FILENAME= prestretch_file
 %
 % ----------------------- Body Forces -----------------------%
 %
