final fix and cleanup

--- a/TestCases/disc_adj_fsi/dyn_fsi/configFEA.cfg
+++ b/TestCases/disc_adj_fsi/dyn_fsi/configFEA.cfg
@@ -8,7 +8,7 @@ NEWMARK_GAMMA=0.52
 
 % Optimization --------------------------------------------------------- %
 FEA_ADVANCED_MODE= YES
-FEA_FILENAME= element_properties.dat
+FEA_FILENAME= element_properties
 GRAD_OBJFUNC_FILENAME= of_grad
 REFERENCE_NODE= 234
 REFERENCE_NODE_DISPLACEMENT= (0.0, 0.0)
