--- a/TestCases/optimization_rans/naca0012/naca0012.cfg
+++ b/TestCases/optimization_rans/naca0012/naca0012.cfg
@@ -103,6 +103,7 @@ SOLUTION_ADJ_FILENAME= restart_adj
 TABULAR_FORMAT= CSV
 CONV_FILENAME= 0_history
 RESTART_FILENAME= restart_flow
+READ_BINARY_RESTART= YES
 RESTART_ADJ_FILENAME= restart_adj
 VOLUME_FILENAME= flow
 SURFACE_FILENAME= surface_flow
