--- a/config_template.cfg
+++ b/config_template.cfg
@@ -2038,12 +2038,19 @@ TOTAL_DV_PENALTY= 0.0
 %
 % Parameters for the corresponding OF (allowed stress and KS multiplier).
 STRESS_PENALTY_PARAM= (1.0, 10.0)
-%
 
 % ---------------- AUTOMATIC DIFFERENTIATION -------------------%
 %
 % Preaccumulation in the AD mode.
 PREACC= YES
+
+% ---------------- AUTOMATIC DIFFERENTIATION (TAPE TEST DEBUG MODE) -------------------%
+%
+% Specify the kind of tape that is checked (OBJECTIVE_FUNCTION_TAPE, FULL_SOLVER_TAPE)
+CHECK_TAPE_TYPE = FULL_SOLVER_TAPE
+%
+% Specify the variables for which the tape is checked (SOLVER_VARIABLES, SOLVER_VARIABLES_AND_MESH_COORDINATES)
+CHECK_TAPE_VARIABLES = SOLVER_VARIABLES
 
 % ---------------- MESH DEFORMATION PARAMETERS (NEW SOLVER) -------------------%
 %
