Add new config option to config_template.cfg for whether solution/restart filenames are extended automatically by the zone number.

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -2380,6 +2380,9 @@ TABULAR_FORMAT= CSV
 % Set <ofstream>.precision(value) to specified value for SU2_DOT and HISTORY output. Useful for exact gradient validation.
 OUTPUT_PRECISION= 10
 %
+% For multizone problems, extend solution and restart filenames automatically by zone number
+MULTIZONE_ADAPT_FILENAME= YES
+%
 % Files to output
 % Possible formats : (TECPLOT_ASCII, TECPLOT, SURFACE_TECPLOT_ASCII,
 %  SURFACE_TECPLOT, CSV, SURFACE_CSV, PARAVIEW_ASCII, PARAVIEW_LEGACY, SURFACE_PARAVIEW_ASCII,
