fix vortex test screen output

--- a/TestCases/mms/fvm_euler/inv_mms_vortex.cfg
+++ b/TestCases/mms/fvm_euler/inv_mms_vortex.cfg
@@ -86,4 +86,4 @@ GRAD_OBJFUNC_FILENAME= of_grad.dat
 SURFACE_FILENAME= surface_flow
 SURFACE_ADJ_FILENAME= surface_adjoint
 OUTPUT_WRT_FREQ= 50
-SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_ENERGY, LIFT, DRAG)
+SCREEN_OUTPUT= (TIME_ITER, RMS_DENSITY, RMS_ENERGY, LIFT, DRAG)
