--- a/TestCases/fea_topology/config.cfg
+++ b/TestCases/fea_topology/config.cfg
@@ -13,7 +13,7 @@ TOPOLOGY_OPTIMIZATION= YES
 % this file, those are the variables the optimizer should manipulate.
 % Values below 0 or above 1 will result in density of 0 or 1 respectively,
 % i.e. the value after filtering is ignored.
-FEA_FILENAME= element_properties
+FEA_FILENAME= element_properties.dat
 % Filtering is required to avoid numerical issues, see [Sigmund, 2007]
 % (DOI 10.1007/s00158-006-0087-x). Currently available options:
 % CONSTANT;  CONICAL (default);  GAUSSIAN;  DILATE;  ERODE.
