--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1732,7 +1732,7 @@ TOPOL_OPTIM_PROJECTION_PARAM= 0.0
 % ------------------- FEA SOLVER FOR FLUID-STRUCTURE INTERACTION --------------------%
 %
 % Filename to input for element-based properties
-FEA_FILENAME= default_element_properties
+FEA_FILENAME= default_element_properties.dat
 %
 % Determine if advanced features are used from the element-based FEA analysis (NO, YES = experimental)
 FEA_ADVANCED_MODE= NO
