--- a/TestCases/fea_topology/quick_start/settings_compliance.cfg
+++ b/TestCases/fea_topology/quick_start/settings_compliance.cfg
@@ -6,7 +6,7 @@ ITER= 1
 %
 % Optimization
 TOPOLOGY_OPTIMIZATION= YES
-FEA_FILENAME= element_properties
+FEA_FILENAME= element_properties.dat
 TOPOL_OPTIM_FILTER_RADIUS= 0.013
 TOPOL_OPTIM_FILTER_KERNEL= ( DILATE,ERODE )
 TOPOL_OPTIM_KERNEL_PARAM= 0.01
