use volume outputs in custom outputs

--- a/TestCases/user_defined_functions/lam_flatplate.cfg
+++ b/TestCases/user_defined_functions/lam_flatplate.cfg
@@ -34,15 +34,16 @@ CUSTOM_OUTPUTS= 'velocity : Macro{sqrt(pow(VELOCITY_X, 2) + pow(VELOCITY_Y, 2) +
                  avg_vel : AreaAvg{$velocity}[z_minus, z_plus];\
                  var_vel : AreaAvg{pow($velocity - avg_vel, 2)}[z_minus, z_plus];\
                  dev_vel : Function{sqrt(var_vel) / avg_vel};\
-                 probe1 : Probe{$velocity}[0.005, 0.005, 0.05]'
+                 probe1 : Probe{$velocity}[0.005, 0.005, 0.05];\
+                 probe2 : Probe{"SKIN_FRICTION-X"}[0, 0, 0]'
 %
 % "COMBO" is the name and group of the output for the objective function
 % (regardless of definition). "CUSTOM" is the group for all custom outputs.
 SCREEN_OUTPUT= INNER_ITER, RMS_DENSITY, RMS_ENERGY, LINSOL_RESIDUAL, FORCE_Z,\
-               SURFACE_MASSFLOW, SURFACE_TOTAL_TEMPERATURE, avg_vel, dev_vel, probe1, COMBO
+               SURFACE_MASSFLOW, SURFACE_TOTAL_TEMPERATURE, avg_vel, dev_vel, probe1, probe2, COMBO
 HISTORY_OUTPUT = ITER, AERO_COEFF, FLOW_COEFF, FLOW_COEFF_SURF, CUSTOM, COMBO
 OBJECTIVE_FUNCTION= CUSTOM_OBJFUNC
-% Here we define how the custom objective is computed from other outputs. For 
+% Here we define how the custom objective is computed from other outputs. For
 % example, force in the z direction (computed for all MARKER_MONITORING and part
 % of AERO_COEFF) plus the absolute value of massflow across the second surface
 % ([1]) in MARKER_ANALYZE, scaled by a factor of 1000. It is also possible to
@@ -115,6 +116,8 @@ SLOPE_LIMITER_FLOW= NONE
 CONV_RESIDUAL_MINVAL= -11
 CONV_STARTITER= 0
 INNER_ITER= 21
+
+OUTPUT_WRT_FREQ= 10
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
