Set b_ndebug to true

--- a/meson.build
+++ b/meson.build
@@ -5,7 +5,7 @@ project('SU2', 'c', 'cpp',
         license: 'LGPL2',
         default_options: ['buildtype=release',
                           'warning_level=0',
-                          'b_ndebug=if-release',
+                          'b_ndebug=true',
                           'c_std=c99',
                           'cpp_std=c++17'])
 
