--- a/meson.build
+++ b/meson.build
@@ -5,7 +5,7 @@ project('SU2', 'c', 'cpp',
         license: 'LGPL2',
         default_options: ['buildtype=release',
                           'warning_level=0',
-                          'b_ndebug=if-release',
+                          'b_ndebug=true',
                           'c_std=c99',
                           'cpp_std=c++17'])
 
@@ -50,6 +50,13 @@ if build_machine.system() != 'windows'
   if get_option('enable-autodiff') or get_option('enable-directdiff')
     default_warning_flags += ['-Wno-non-virtual-dtor']
   endif
+endif
+
+# Handle assertions: default is b_ndebug=true (assertions disabled)
+# but for debug builds, we want to enable assertions
+if get_option('buildtype') == 'debug'
+  # Undefine NDEBUG
+  su2_cpp_args += '-UNDEBUG'
 endif
 
 # meson script path
