--- a/TestCases/py_wrapper/custom_source_buoyancy/lam_buoyancy_cavity.cfg
+++ b/TestCases/py_wrapper/custom_source_buoyancy/lam_buoyancy_cavity.cfg
@@ -12,8 +12,7 @@
 %
 SOLVER= INC_NAVIER_STOKES
 KIND_TURB_MODEL= NONE
-MATH_PROBLEM= DIRECT
-RESTART_SOL= NO
+RESTART_SOL= YES
 
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 %
@@ -47,6 +46,7 @@ THERMAL_CONDUCTIVITY_CONSTANT= 0.0246295028571
 
 % ----------------------- BODY FORCE DEFINITION -------------------------------%
 %
+% switch off body force, we now do this with the python wrapper
 BODY_FORCE= NO
 BODY_FORCE_VECTOR= ( 0.0, -9.81, 0.0 )
 
@@ -67,12 +67,12 @@ MARKER_MONITORING= ( NONE )
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
 NUM_METHOD_GRAD= GREEN_GAUSS
-CFL_NUMBER= 50
+CFL_NUMBER= 100
 CFL_ADAPT= NO
-CFL_ADAPT_PARAM= ( 1.5, 0.5, 15.0, 1e10)
+CFL_ADAPT_PARAM= ( 0.9, 1.1, 10.0,10000, 1.0e-3)
 MAX_DELTA_TIME= 1E6
 RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
-ITER=6
+ITER=1
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -93,7 +93,7 @@ TIME_DISCRE_FLOW= EULER_IMPLICIT
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
 CONV_RESIDUAL_MINVAL= -12
-CONV_STARTITER= 10
+CONV_STARTITER= 1
 CONV_CAUCHY_ELEMS= 100
 CONV_CAUCHY_EPS= 1E-6
 
@@ -113,6 +113,9 @@ VOLUME_ADJ_FILENAME= adjoint
 GRAD_OBJFUNC_FILENAME= of_grad.dat
 SURFACE_FILENAME= surface_flow
 SURFACE_ADJ_FILENAME= surface_adjoint
-OUTPUT_WRT_FREQ= 100
-SCREEN_OUTPUT= (OUTER_ITER,INNER_ITER, RMS_PRESSURE, RMS_VELOCITY-X, RMS_VELOCITY-Y, RMS_TEMPERATURE)
+OUTPUT_WRT_FREQ= 10
+SCREEN_OUTPUT= (INNER_ITER, RMS_PRESSURE, RMS_VELOCITY-X, RMS_VELOCITY-Y, RMS_TEMPERATURE)
+
+WRT_PERFORMANCE= YES
+PYTHON_CUSTOM_SOURCE= YES
 
