--- a/TestCases/py_wrapper/turbulent_premixed_psi/psi.cfg
+++ b/TestCases/py_wrapper/turbulent_premixed_psi/psi.cfg
@@ -67,7 +67,6 @@ AXISYMMETRIC= YES
 SPECIFIED_INLET_PROFILE= YES
 INLET_MATCHING_TOLERANCE=1e-4
 INLET_FILENAME= inlet.dat
-%INLET_INTERPOLATION_FUNCTION= LINEAR_1D
 INC_INLET_TYPE=  VELOCITY_INLET
 INC_INLET_DAMPING= 0.1
 MARKER_INLET= ( inlet, 673, 40.0, 1.0,  0.0, 0.0)
@@ -82,9 +81,10 @@ MARKER_OUTLET= ( outlet, 0.0 )
 %
 NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 %
-CFL_NUMBER= 10.0
+CFL_NUMBER= 2.00
 CFL_REDUCTION_SPECIES= 1.0
 CFL_REDUCTION_TURB= 1.0
+%CFL_ADAPT= YES
 CFL_ADAPT= YES
 CFL_ADAPT_PARAM= ( 0.95, 1.01, 1.0, 250, 1.0e-4, 0)
 
@@ -95,7 +95,7 @@ ITER= 1
 %
 LINEAR_SOLVER= FGMRES
 LINEAR_SOLVER_PREC= ILU
-LINEAR_SOLVER_ERROR= 1E-8
+LINEAR_SOLVER_ERROR= 1E-12
 LINEAR_SOLVER_ITER= 10
 
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
@@ -131,7 +131,6 @@ SPECIES_CLIPPING_MAX= 1.0
 %
 CONV_NUM_METHOD_TURB= BOUNDED_SCALAR
 MUSCL_TURB= NO
-
 %
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
@@ -141,9 +140,7 @@ CONV_STARTITER= 10
 %
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
-%MESH_FILENAME= psi_coarse.su2
 MESH_FILENAME= psi.su2
-%MESH_FILENAME= psi_fine.su2
 %
 SCREEN_OUTPUT= INNER_ITER WALL_TIME \
                RMS_PRESSURE RMS_VELOCITY-X RMS_VELOCITY-Y RMS_TKE RMS_DISSIPATION RMS_SPECIES_0 \
@@ -158,7 +155,7 @@ MARKER_ANALYZE= gas_inlet, air_axial_inlet, outlet
 MARKER_ANALYZE_AVERAGE= AREA
 %
 OUTPUT_FILES= RESTART, PARAVIEW_MULTIBLOCK
-VOLUME_OUTPUT= RESIDUAL, PRIMITIVE
+VOLUME_OUTPUT= RESIDUAL, PRIMITIVE, SPECIES_UDS_0
 OUTPUT_WRT_FREQ= 100
 %
 READ_BINARY_RESTART= YES
@@ -166,3 +163,4 @@ RESTART_FILENAME= restart
 SOLUTION_FILENAME= solution
 %
 WRT_PERFORMANCE= YES
+PYTHON_CUSTOM_SOURCE= YES
