fix regression test residuals

--- a/TestCases/py_wrapper/turbulent_premixed_psi/psi.cfg
+++ b/TestCases/py_wrapper/turbulent_premixed_psi/psi.cfg
@@ -143,10 +143,8 @@ CONV_STARTITER= 10
 MESH_FILENAME= psi.su2
 %
 SCREEN_OUTPUT= INNER_ITER WALL_TIME \
-               RMS_PRESSURE RMS_VELOCITY-X RMS_VELOCITY-Y RMS_TKE RMS_DISSIPATION RMS_SPECIES_0 \
-               LINSOL_ITER LINSOL_RESIDUAL \
-               LINSOL_ITER_TURB LINSOL_RESIDUAL_TURB \
-               LINSOL_ITER_SPECIES LINSOL_RESIDUAL_SPECIES AVG_CFL
+               RMS_PRESSURE RMS_VELOCITY-X RMS_VELOCITY-Y RMS_TKE RMS_DISSIPATION RMS_SPECIES_0
+
 SCREEN_WRT_FREQ_INNER= 1
 %
 HISTORY_OUTPUT= ITER RMS_RES LINSOL SPECIES_COEFF SPECIES_COEFF_SURF
